vite-template/kubernetes-manifests/minimal-nginx-ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - hosts:
    - dummy.flyku.com
    secretName: userapi-tls    


  - hosts:
    - dummy2.flyku.com
    secretName: userapi-tls    
  ingressClassName: nginx
  rules:
  - host: dummy.flyku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-service
            port:
              number: 80


  - host: dummy2.flyku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imagebot-service
            port:
              number: 80
